[package]
name = "palm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
enum_dispatch = "0.3.13"
pulldown-cmark = { version = "0.9.3", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
